sfcore-ai/crates/rag-api-server/check_output.txt
warning: both `/home/sfcore/SFCoreAIApps/AIRustTools/root-app/sfcore-ai/.cargo/config` and `/home/sfcore/SFCoreAIApps/AIRustTools/root-app/sfcore-ai/.cargo/config.toml` exist. Using `/home/sfcore/SFCoreAIApps/AIRustTools/root-app/sfcore-ai/.cargo/config`
warning: `/home/sfcore/.cargo/config` is deprecated in favor of `config.toml`
  |
  = help: if you need to support cargo 1.38 or earlier, you can symlink `config` to `config.toml`
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/sfcore/SFCoreAIApps/AIRustTools/root-app/sfcore-ai/crates/rag-embedding-worker/Cargo.toml
workspace: /home/sfcore/SFCoreAIApps/AIRustTools/root-app/sfcore-ai/Cargo.toml
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/sfcore/SFCoreAIApps/AIRustTools/root-app/sfcore-ai/crates/rag-api-server/Cargo.toml
workspace: /home/sfcore/SFCoreAIApps/AIRustTools/root-app/sfcore-ai/Cargo.toml
warning: /home/sfcore/SFCoreAIApps/AIRustTools/root-app/sfcore-ai/crates/rag-embedding-worker/Cargo.toml: unused manifest key: target.x86_64-pc-windows-gnu.linker
warning: patch `llama-cpp-sys-2 v0.1.132 (/home/sfcore/SFCoreAIApps/AIRustTools/root-app/sfcore-ai/crates/patched/llama-cpp-sys-2)` was not used in the crate graph
help: Check that the patched package version and available features are compatible
      with the dependency requirements. If the patch has a different version from
      what is locked in the Cargo.lock file, run `cargo update` to use the new
      version. This may also occur with an optional dependency that is not enabled.
    Checking rag-api-server v0.1.0 (/home/sfcore/SFCoreAIApps/AIRustTools/root-app/sfcore-ai/crates/rag-api-server)
error[E0432]: unresolved import `crate::state`
  --> crates/rag-api-server/src/handlers/chat.rs:14:12
   |
14 | use crate::state::AppState;
   |            ^^^^^ could not find `state` in the crate root

error[E0603]: type alias import `SessionId` is private
  --> crates/rag-api-server/src/services/conversation/manager.rs:8:43
   |
 8 |     ConversationState, RetrievalDecision, SessionId, TokenCount,
   |                                           ^^^^^^^^^ private type alias import
   |
note: the type alias import `SessionId` is defined here...
  --> crates/rag-api-server/src/services/conversation/types.rs:4:40
   |
 4 | use crate::models::chat::{ChatMessage, SessionId};
   |                                        ^^^^^^^^^
note: ...and refers to the type alias `SessionId` which is defined here
  --> crates/rag-api-server/src/models/chat.rs:47:1
   |
47 | pub type SessionId = i64;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ you could import this directly
help: import `SessionId` directly
   |
 8 |     ConversationState, RetrievalDecision, models::chat::SessionId, TokenCount,
   |                                           ++++++++++++++

error[E0603]: struct import `ChatMessage` is private
   --> crates/rag-api-server/src/services/rag_service.rs:123:102
    |
123 |     pub fn build_prompt(&self, user_query: &str, context: &str) -> Vec<crate::services::llm_service::ChatMessage> {
    |                                                                                                      ^^^^^^^^^^^ private struct import
    |
note: the struct import `ChatMessage` is defined here...
   --> crates/rag-api-server/src/services/llm_service.rs:11:5
    |
 11 | use crate::models::chat::ChatMessage;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...and refers to the struct `ChatMessage` which is defined here
   --> crates/rag-api-server/src/models/chat.rs:6:1
    |
  6 | pub struct ChatMessage {
    | ^^^^^^^^^^^^^^^^^^^^^^ you could import this directly
help: consider importing this struct through its public re-export instead
    |
123 -     pub fn build_prompt(&self, user_query: &str, context: &str) -> Vec<crate::services::llm_service::ChatMessage> {
123 +     pub fn build_prompt(&self, user_query: &str, context: &str) -> Vec<crate::services::conversation::ChatMessage> {
    |
help: import `ChatMessage` directly
    |
123 -     pub fn build_prompt(&self, user_query: &str, context: &str) -> Vec<crate::services::llm_service::ChatMessage> {
123 +     pub fn build_prompt(&self, user_query: &str, context: &str) -> Vec<models::chat::ChatMessage> {
    |

error[E0603]: struct import `ChatMessage` is private
   --> crates/rag-api-server/src/services/rag_service.rs:124:60
    |
124 |         let system_message = crate::services::llm_service::ChatMessage {
    |                                                            ^^^^^^^^^^^ private struct import
    |
note: the struct import `ChatMessage` is defined here...
   --> crates/rag-api-server/src/services/llm_service.rs:11:5
    |
 11 | use crate::models::chat::ChatMessage;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...and refers to the struct `ChatMessage` which is defined here
   --> crates/rag-api-server/src/models/chat.rs:6:1
    |
  6 | pub struct ChatMessage {
    | ^^^^^^^^^^^^^^^^^^^^^^ you could import this directly
help: consider importing this struct through its public re-export instead
    |
124 -         let system_message = crate::services::llm_service::ChatMessage {
124 +         let system_message = crate::services::conversation::ChatMessage {
    |
help: import `ChatMessage` directly
    |
124 -         let system_message = crate::services::llm_service::ChatMessage {
124 +         let system_message = models::chat::ChatMessage {
    |

error[E0603]: struct import `ChatMessage` is private
   --> crates/rag-api-server/src/services/rag_service.rs:134:58
    |
134 |         let user_message = crate::services::llm_service::ChatMessage {
    |                                                          ^^^^^^^^^^^ private struct import
    |
note: the struct import `ChatMessage` is defined here...
   --> crates/rag-api-server/src/services/llm_service.rs:11:5
    |
 11 | use crate::models::chat::ChatMessage;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...and refers to the struct `ChatMessage` which is defined here
   --> crates/rag-api-server/src/models/chat.rs:6:1
    |
  6 | pub struct ChatMessage {
    | ^^^^^^^^^^^^^^^^^^^^^^ you could import this directly
help: consider importing this struct through its public re-export instead
    |
134 -         let user_message = crate::services::llm_service::ChatMessage {
134 +         let user_message = crate::services::conversation::ChatMessage {
    |
help: import `ChatMessage` directly
    |
134 -         let user_message = crate::services::llm_service::ChatMessage {
134 +         let user_message = models::chat::ChatMessage {
    |

warning: unused import: `ConfigError`
 --> crates/rag-api-server/src/config/settings.rs:2:22
  |
2 | use config::{Config, ConfigError, Environment, File};
  |                      ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `pgvector::Vector`
 --> crates/rag-api-server/src/database/models.rs:2:5
  |
2 | use pgvector::Vector;
  |     ^^^^^^^^^^^^^^^^

warning: unused import: `debug`
 --> crates/rag-api-server/src/handlers/chat.rs:9:15
  |
9 | use tracing::{debug, error, info};
  |               ^^^^^

warning: unused import: `anyhow::Context`
  --> crates/rag-api-server/src/handlers/chat.rs:10:5
   |
10 | use anyhow::Context;
   |     ^^^^^^^^^^^^^^^

warning: unused import: `StreamEvent`
  --> crates/rag-api-server/src/handlers/chat.rs:12:40
   |
12 | use crate::models::chat::{ChatRequest, StreamEvent};
   |                                        ^^^^^^^^^^^

warning: unused import: `IntoResponse`
 --> crates/rag-api-server/src/security/middleware.rs:7:16
  |
7 |     response::{IntoResponse, Response},
  |                ^^^^^^^^^^^^

warning: unused imports: `error` and `warn`
 --> crates/rag-api-server/src/services/llm_service.rs:7:22
  |
7 | use tracing::{debug, warn, error};
  |                      ^^^^  ^^^^^

warning: unused import: `warn`
 --> crates/rag-api-server/src/services/document_service.rs:8:28
  |
8 | use tracing::{debug, info, warn};
  |                            ^^^^

warning: unused import: `TokenCount`
 --> crates/rag-api-server/src/services/conversation/manager.rs:8:54
  |
8 |     ConversationState, RetrievalDecision, SessionId, TokenCount,
  |                                                      ^^^^^^^^^^

warning: unused imports: `DateTime` and `Utc`
 --> crates/rag-api-server/src/services/conversation/types.rs:1:14
  |
1 | use chrono::{DateTime, Utc};
  |              ^^^^^^^^  ^^^

warning: unused imports: `Deserialize` and `Serialize`
 --> crates/rag-api-server/src/services/conversation/types.rs:2:13
  |
2 | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^  ^^^^^^^^^

Some errors have detailed explanations: E0432, E0603.
For more information about an error, try `rustc --explain E0432`.
warning: `rag-api-server` (lib) generated 11 warnings
error: could not compile `rag-api-server` (lib) due to 5 previous errors; 11 warnings emitted
